<resources>
    <string name="app_name">Pastebin</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_my_paste_screen">My pastes</string>
    <string name="new_paste">New paste</string>
    <string name="pastebin">Pastebin</string>

    <string-array name="syntax">
        <item>java</item>
        <item>json</item>
        <item>php</item>
        <item>sql</item>
        <item>swift</item>
        <item>javascript</item>
    </string-array>

    <string-array name="expiration">
        <item>Never</item>
        <item>10 Minutes</item>
        <item>1 Hour</item>
        <item>1 Day</item>
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>1 Month</item>
    </string-array>

    <string-array name="exposure">
        <item>Public</item>
        <item>Unlisted</item>
        <item>Private</item>
    </string-array>

    <string name="hello">Hello </string>
    <string name="login_hint">Login:</string>
    <string name="password_hint">Password:</string>
    <string name="login">Login</string>
    <string name="login_failure">Login failure</string>
    <string name="user">"User "</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="guest">Guest</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="my_pastes">My pastes</string>
    <string name="profile">Profile</string>
    <string name="trendings">Trendings</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="no_data">No data</string>
    <string name="paste_code">Paste code</string>
    <string name="input_some_code">Please, input some code.</string>
    <string name="you_need_login">You need to login first.</string>
    <string name="no_pastes_yet">No pastes yet.</string>
    <string name="action_post_paste">Post paste</string>
    <string name="action_clear">clear</string>
    <string name="your_link">Your link:</string>
    <string name="type_code_here">Type code here:</string>
    <string name="syntax_highlight">Syntax highlight:</string>
    <string name="paste_expiration">Paste expiration:</string>
    <string name="paste_exposure">Paste exposure:</string>
    <string name="paste_name">Paste name:</string>
    <string name="no_title">No title</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="location">Location:</string>
    <string name="please_wait">Please wait...</string>
    <string name="paste_code_loading">Paste code is loading.</string>
    <string name="pastes_loading">Pastes are loading</string>
    <string name="user_data_loading">User data is loading.</string>
</resources>

